# pia-lara

./: .gitignore  .ini.sample  .todo.md  a  app.py  flask.wsgi  pruebachange.txt  pyproject.toml  readme.md  requirements.txt
.github/workflows/: release.yml  ruff.yml
css/: style_cliente.css  style_cliente.css.map
migrations/: 2025_01_24_modify_campo_activo_tabla_usuarios.py  add_metadata.py  add_texto_normalizado.py  audios_migration.py  disfonias_migration.py  enfermedades_migration.py  inactivate_stopped_technician.py  metadata_sylabus_export.json  modify-user-validation.js  sylabus_ampliado.csv  sylabus_migration.py  sylabus_vk_migration.py  tarea38_1a.py  tarea38_1b.py  textoFormalizado_sylabus_export.json  users_gv_migration.py  users_migration.py  users_vk_migration.py  zzz-consultas.py
pialara/: __init__.py  db.py  decorators.py  permissions.py
pialara/blueprints/: audios.py  auth.py  lara.py  logros.py  main.py  syllabus.py  users.py
pialara/models/: Audios.py  Clicks.py  Disfonias.py  Enfermedades.py  Frases.py  Logros.py  MongoModel.py  Survey.py  Syllabus.py  User.py  UserStats.py  Usuario.py  grapyAudioUser.py
pialara/static/js/: accessibility-settings.js  font_size.js  frase-sugerida.js  frases-momento.js  graficos.js  lara.js  record-audio.js  speech-recording.js  speech-synthesis.js  usabilidad_color.js  users-create-validation.js
pialara/static/sass/: _style_client_audio.scss  _style_client_tag.scss  style_client_audio.scss  style_client_tag.scss  style_cliente.scss
pialara/templates/: base.html  client.html  layout.html
(+40 files in other folders)
